tests/errors/err_function_arity.bas
10 REM Test function arity validation
20 X = SIN(1, 2)
